[package]
name = "boggle"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]

[dependencies]
sequence_trie = "0.3.5"
failure = "0.1.1"
failure_derive = "0.1.1"
rand = "0.7.3"
bitstream-io = "0.6.3"
serde = "1.0.70"
serde_derive = "1.0.70"

[workspace]
members = [
    "common",
    "server",
    "ui",
    "dict",
    "tools/solve",
    "tools/dictcat",
    "tools/mkdict",
]
