[package]
name = "boggle_common"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[dependencies]
boggle = { path = ".." }
serde = "1.0.70"
serde_derive = "1.0.70"
bincode = "1.0.1"
failure = "0.1.1"
actix-web = { version = "0.7.1", optional = true }
actix = { version = "0.7.1", optional = true }
chrono = { version = "0.4.4", features = ["serde"] }

[features]
# default = ["actix", "actix-web"]
