cargo-features = ["edition"]

[package]
name = "boggle_server"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]

edition = "2018"

[dependencies]
boggle = { path = ".." }
boggle_common = { path = "../common", features = ["actix", "actix-web"] }
dict = { path = "../dict" }
rand = "0.5.4"
bincode = "1.0.1"
failure = "0.1.1"
actix-web = "0.7.1"
actix = "0.7.1"
lazy_static = "1.0.2"
chrono = "0.4.4"
structopt-derive = "0.2.10"
structopt = "0.2.10"
